Implementação do padrão specifications no repositório para consulta de turmas

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -7,6 +7,7 @@
 ### Mensagens Gerais ###
 NotBlank=O campo {0} deve ser informado.
 NotNull=O campo {0} não pode ser nulo.
+typeMismatch.java.lang.Long={0} deve ser um número válido.
 
 ### Validações Customizadas Gerais ###
 CampoInteiro.foraDoIntervaloValido=O campo {0} deve ser um número entre {2} e {1}.
@@ -27,3 +28,8 @@ dataTermino=Data Término
 #### Prédio ####
 predio=Prédio
 predio.id=Id do Prédio
+
+#### Turma Filter ####
+turmaFilter.idPeriodo=Id do Período da Turma
+turmaFilter.idDepartamento=Id do Departamento da Turma
+turmaFilter.idPredio=Id do Prédio da Turma
