Implementação da Importação de Turmas a partir da API de Sistemas da UFRN

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -33,3 +33,7 @@ predio.id=Id do Prédio
 turmaFilter.idPeriodo=Id do Período da Turma
 turmaFilter.idDepartamento=Id do Departamento da Turma
 turmaFilter.idPredio=Id do Prédio da Turma
+
+#### Importação de Turmas ####
+Size.importacaoTurmasInput.idsDepartamentos=Pelo menos um id de departamento deve ser informado no array.
+NotNull.importacaoTurmasInput.idsDepartamentos=O campo {0} deve ser informado.
